Fix girland styling bug and header overflow bug

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,4 +12,6 @@ body {
 
 main {
   overflow-x: hidden;
+  overflow-y: visible;
+  min-height: 300px;
 }
