--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,13 @@
 .girland {
   &1 {
     position: absolute;
-    width: 100%;
-    height: 220px;
+    width: auto;
+    height: 250px;
     transform: rotate(-5deg);
     opacity: 0.6;
     z-index: -1;
     width: 120vw;
-    top: 0;
+    top: -20px;
     left: -10px;
     background: url('../images/girland.png') no-repeat;
     background-size: contain;
